# MultidialectalKnowledgeExtraction

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  sources.json
configs/: experiment.yaml  experiment_large.yaml
reports/: asr_best_medium_large.md  asr_compare_small_medium_large.md  asr_index.json  asr_index.md  asr_runtime_summary_validation.csv  asr_summary_large.md  asr_summary_medium.md  asr_whisper_kmr_test.json  asr_whisper_kmr_validation_beam4_demo.json  asr_whisper_kmr_validation_large.json  asr_whisper_kmr_validation_off.json  asr_whisper_kmr_validation_on.json  asr_whisper_kmr_validation_smoke.json  asr_whisper_kmr_validation_smoke_bias.json  asr_whisper_kmr_validation_smoke_tune1.json  asr_whisper_tr_test.json  asr_whisper_tr_test_medium.json  asr_whisper_tr_validation.json  asr_whisper_tr_validation_beam3_smoke.json  asr_whisper_tr_validation_beam4_demo.json  asr_whisper_tr_validation_beam4_fast.json  asr_whisper_tr_validation_beam6.json  asr_whisper_tr_validation_beam6_demo.json  asr_whisper_tr_validation_greedy_fast.json  asr_whisper_tr_validation_large.json  asr_whisper_tr_validation_medium.json  asr_whisper_tr_validation_smoke.json  asr_whisper_tr_validation_smoke_tune1.json  asr_whisper_zza_test.json  asr_whisper_zza_validation_beam4_demo.json  asr_whisper_zza_validation_large.json  asr_whisper_zza_validation_medium.json  asr_whisper_zza_validation_off.json  asr_whisper_zza_validation_on.json  asr_whisper_zza_validation_smoke.json  asr_whisper_zza_validation_smoke_bias.json  asr_whisper_zza_validation_smoke_tune1.json  (+49 more)
(+343 files in other folders)
